@@ -27,6 +27,9 @@ namespace Cinemachine
             /// <summary>Third stage: orient the camera to point at the target</summary>
             Aim,
 
+            /// <summary>Second stage: position the camera in space after the aim</summary>
+            BodyAfterAim,
+
             /// <summary>Final pipeline stage: apply noise (this is done separately, in the
             /// Correction channel of the CameraState)</summary>
             Noise,
